# data-analysis-portfolio

./: .gitignore  README.md  pyproject.toml
.rta_call_center_analytics/: README.md
.rta_call_center_analytics/.virtual_documents/notebooks/: Untitled.ipynb  cleaning_analysis.ipynb  data_generation.ipynb
.rta_call_center_analytics/data/: raw_calls.csv
.rta_call_center_analytics/notebooks/: cleaning_analysis.ipynb  data_generation.ipynb  data_generation.py
RTA Call Center Analytics/: README.md
RTA Call Center Analytics/docs/: analysis.md
RTA Call Center Analytics/notebooks/: data_cleaning.ipynb  data_generation.ipynb  report.ipynb
call_center_simulated_dataset/: call_center_simulated_dataset.xlsx  generate_dataset.py  raw_data.csv
rta_call_center_analytics/docs/: number_adjustments.md
rta_call_center_analytics/notebooks/: eda.ipynb
